# yorsh

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  main.c
client/inc/: client.h  communicator.h
client/src/: client.c  communicator.c
libs/: CMakeLists.txt
libs/gigaprotocol/: CMakeLists.txt
libs/gigaprotocol/inc/: gigaprotocol.h
libs/gigaprotocol/src/: gigaprotocol.c
libs/http1/: CMakeLists.txt
libs/http1/inc/: http1.h
libs/http1/src/: http1.c  test.c
libs/utils/: CMakeLists.txt
libs/utils/inc/: utils.h
libs/utils/src/: utils.c
libs/vector/: CMakeLists.txt
libs/vector/inc/: vector.h
libs/vector/src/: vector.c
server/: CMakeLists.txt  main.c
server/inc/: connection.h  server.h
server/src/: connection.c  server.c
